# android_audio_app

./: LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  README  build.sh  clean.sh
app/src/main/cpp/i2s_libaray/: CMakeLists.txt
app/src/main/cpp/i2s_libaray/examples/: CMakeLists.txt  i2s_example.c
app/src/main/cpp/i2s_libaray/include/: i2s_api.h
app/src/main/cpp/i2s_libaray/include/internal/: HighSpeedI2S.h  I2SError.h  I2SFactory.h  II2S.h  NormalI2S.h  RingBuffer.h  TinyalsaWrapper.h  hsi2s_common.h
app/src/main/cpp/i2s_libaray/src/: CommandExecutor.h  HighSpeedI2S.cpp  I2SFactory.cpp  NormalI2S.cpp  TinyalsaWrapper.cpp  i2s_api.cpp
app/src/main/cpp/include/: dc_bootup.h  dc_share.h  flash_layout.h  platform_hal.h  type.h
app/src/main/cpp/radio/: audio_data.h  audio_dts.c  audio_dts.h  audio_mgr.c  audio_mgr.h  main.c  radio_mgr.h
app/src/main/cpp/si479x_radio/: CMakeLists.txt
app/src/main/cpp/si479x_radio/flash_tool/: CMakeLists.txt  flash_tool.c
app/src/main/cpp/si479x_radio/include/: dc_bootup.h  dc_share.h  flash_layout.h  platform_hal.h  type.h
app/src/main/cpp/si479x_radio/include/config/: dc_config.h  dc_config_1DT.h  dc_config_1T.h  dc_config_2T.h  general_config.h
app/src/main/cpp/si479x_radio/include/config/part_number/: si47904GE_config.h  si47921GE_config.h  si4792502_config.h  si47972DE_config.h
app/src/main/cpp/si479x_radio/include/config/share/: hifi_4chan_config.h  hifi_6chan_config.h  hifi_dtscs_config.h  hifi_hub_config.h  radio_config.h
app/src/main/cpp/si479x_radio/include/si479x/: si479x_audio.h  si479x_audio_api.h  si479x_commanddefs.h  si479x_core.h  si479x_flashload.h  si479x_hifi.h  si479x_propertydefs.h  si479x_tuner.h
app/src/main/cpp/si479x_radio/radio/: CMakeLists.txt  audio_data.c  audio_data.h  audio_dts.h  audio_mgr.h  main.c  radio_mgr.c  radio_mgr.h
app/src/main/cpp/si479x_radio/radio/platform/: CMakeLists.txt
app/src/main/cpp/si479x_radio/tuner/: dc_1DT_implement.c  dc_1DT_implement.h  dc_1T_implement.c  dc_1T_implement.h  dc_2T_implement.h  dc_atl.c  dc_bootup.c  dc_flashutility.c  dc_flashutility.h  dc_share.c
app/src/main/cpp/si479x_radio/tuner/9x/: CMakeLists.txt  si479x_audio.c  si479x_audio_types.h  si479x_hifi.c  si479x_internel.h
app/src/main/cpp/si479x_radio/tuner/dab/: DAB_DLS_handler.h  DAB_implement.h  DAB_nvm_storage.h  DAB_service_list_handler.c  DAB_service_list_handler.h  dab_common.h
app/src/main/cpp/si479x_radio/tuner/rds/: CMakeLists.txt  rds.c  rds.h  si479x_rds.c  si479x_rds.h
app/src/main/cpp/tuner/: CMakeLists.txt  dc_1DT_implement.h  dc_1T_implement.h  dc_2T_implement.c  dc_2T_implement.h  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
(+73 files in other folders)
